--- a/ACME/ACME/Pages/LoginPage.xaml
+++ b/ACME/ACME/Pages/LoginPage.xaml
@@ -1,4 +1,5 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
+
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:controls="clr-namespace:ACME.Controls;assembly=ACME"
@@ -18,28 +19,56 @@
                        MinimumWidthRequest="100"
                        Source="logo.png" />
                 <StackLayout Orientation="Vertical"
-                             Spacing="10"
-                             Padding="20, 20, 20, 10">
-                    <controls:ExtendedEntry  Placeholder="Your User"
-                                             HorizontalOptions="FillAndExpand"
-                                             FocusLineColor="{StaticResource MainColor}"
-                                             Image="user"
-                                             ImageAlignment="Left"
-                                             ImageWidth="16"
-                                             ImageHeight="16"
-                                             Text="{Binding User, Mode=TwoWay }" />
-                    <controls:ExtendedEntry  IsPassword="true"
-                                             Placeholder="Your Password"
-                                             Image="password"
-                                             ImageAlignment="Left"
-                                             ImageWidth="16"
-                                             ImageHeight="16"
-                                             FocusLineColor="{StaticResource MainColor}"
-                                             Text="{Binding Password, Mode=TwoWay}" />
+                             Spacing="30"
+                             Padding="10">
+                    <controls:ExtendedEntry Placeholder="Your User"
+                                            HorizontalOptions="FillAndExpand"
+                                            FocusLineColor="{StaticResource MainColor}"
+                                            Image="user"
+                                            ImageAlignment="Left"
+                                            Text="{Binding User, Mode=TwoWay }">
+                        <controls:ExtendedEntry.ImageWidth>
+                            <OnPlatform x:TypeArguments="x:Int32"
+                                        iOS="32"
+                                        Android="16" />
+                        </controls:ExtendedEntry.ImageWidth>
+                        <controls:ExtendedEntry.ImageHeight>
+                            <OnPlatform x:TypeArguments="x:Int32"
+                                        iOS="32"
+                                        Android="16" />
+                        </controls:ExtendedEntry.ImageHeight>
+                        <controls:ExtendedEntry.HeightRequest>
+                            <OnPlatform x:TypeArguments="x:Double"
+                                        iOS="32"
+                                        Android="34" />
+                        </controls:ExtendedEntry.HeightRequest>
+                    </controls:ExtendedEntry>
+                    <controls:ExtendedEntry IsPassword="true"
+                                            Placeholder="Your Password"
+                                            Image="password"
+                                            ImageAlignment="Left"
+                                            FocusLineColor="{StaticResource MainColor}"
+                                            Text="{Binding Password, Mode=TwoWay}">
+                        <controls:ExtendedEntry.ImageWidth>
+                            <OnPlatform x:TypeArguments="x:Int32"
+                                        iOS="32"
+                                        Android="16" />
+                        </controls:ExtendedEntry.ImageWidth>
+                        <controls:ExtendedEntry.ImageHeight>
+                            <OnPlatform x:TypeArguments="x:Int32"
+                                        iOS="32"
+                                        Android="16" />
+                        </controls:ExtendedEntry.ImageHeight>
+                        <controls:ExtendedEntry.HeightRequest>
+                            <OnPlatform x:TypeArguments="x:Double"
+                                        iOS="32"
+                                        Android="34" />
+                        </controls:ExtendedEntry.HeightRequest>
+                    </controls:ExtendedEntry>
                 </StackLayout>
                 <StackLayout Orientation="Vertical"
-                             Spacing="10"
-                             Padding="20, 0, 20, 0"
+                             Spacing="30"
+                             Padding="10"
                              VerticalOptions="EndAndExpand"
                              HorizontalOptions="FillAndExpand">
                     <Button Command="{ Binding LoginCommand }"
@@ -48,8 +77,7 @@
                             TextColor="White"
                             VerticalOptions="EndAndExpand"
                             BackgroundColor="{StaticResource MainColor}"
-                            HorizontalOptions="FillAndExpand">
-                    </Button>
+                            HorizontalOptions="FillAndExpand" />
                     <Label Text="Forgot?"
                            HorizontalTextAlignment="End"
                            HorizontalOptions="End" />
